--- a/iram-detail.html
+++ b/iram-detail.html
@@ -55,8 +55,13 @@
             </div>
             <div class="parag">
                 <h2 >Image</h2>
-                <div class="img-container">
-                    <img src="./src/assets/mockup-iram-contact.png" alt="">
+                <div class="parag-img-container">
+                    <div class="img-container">
+                        <img src="./src/assets/mockup-iram-hp.png" alt="">
+                    </div>
+                    <div class="img-container">
+                        <img src="./src/assets/mockup-iram-contact.png" alt="">
+                    </div>
                 </div>
             </div>
             <div class="link container-buttons">
