--- a/index.html
+++ b/index.html
@@ -23,8 +23,6 @@
             </nav>
         </div>
 
-
-
         <div class="hero">
             <div class="container">
                 <div class="portrait"></div>
@@ -63,6 +61,14 @@
                         <div class="infos">
                         </div>
                         <a href="proximus-detail.html" class="card-link proximus">
+                            <h3>Proximus</h3>
+                            <img src="./src/assets/proximus.jpg" alt="image d'une famille">
+                        </a>
+                    </div> 
+                    <div class="projects__details__container">
+                        <div class="infos">
+                        </div>
+                        <a href="persona-detail.html" class="card-link proximus">
                             <h3>Proximus</h3>
                             <img src="./src/assets/proximus.jpg" alt="image d'une famille">
                         </a>
