delete persona-detail link

--- a/index.html
+++ b/index.html
@@ -65,14 +65,14 @@
                             <img src="./src/assets/proximus.jpg" alt="image d'une famille">
                         </a>
                     </div> 
-                    <div class="projects__details__container">
+                    <!-- <div class="projects__details__container">
                         <div class="infos">
                         </div>
                         <a href="persona-detail.html" class="card-link proximus">
                             <h3>Proximus</h3>
                             <img src="./src/assets/proximus.jpg" alt="image d'une famille">
                         </a>
-                    </div> 
+                    </div>  -->
                 </div>
             </div>
         </section>
